ng component authentication small fixes

--- a/frontend-blog-client/src/app/components/authentication/authentication.component.css
+++ b/frontend-blog-client/src/app/components/authentication/authentication.component.css
@@ -93,6 +93,10 @@
     font-weight: 500;
 }
 
+*:disabled {
+    opacity: 0.66;
+}
+
 @media (hover: hover) {
     #login-form button:hover {
         background-color: orangered;
